--- a/game.css
+++ b/game.css
@@ -77,6 +77,11 @@ game card div {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	top:0;
+	left:0;
+
+	perspective: 1000px;
+	transform-style: preserve-3d;
 }
 
 game card.flipped {
