well damn, safari doesn't like me using randomize off the proto in randCopy

--- a/game.css
+++ b/game.css
@@ -9,6 +9,8 @@ game {
 	perspective: 1000px;
 	padding-top: 30px;
 
+	position: relative;
+
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
